--- a/config/locales/zh-TW.yml
+++ b/config/locales/zh-TW.yml
@@ -1,5 +1,6 @@
 zh-TW:
   landing:
+    site: Ruby Taiwan
     title: Ruby Taiwan
     description: 'Ruby Taiwan 社群成立於2008年10月，主要是針對 Ruby 程式語言及軟體開發，進行業界的交流及分享，提昇開發人員的技術深度與廣度。'
   
